<resources>
    <string name="app_name">西汉南越王</string>
    <string name="device_no">设备号</string>
    <string name="fromat">格式有误</string>
    <string name="install_text">请先安装测试程序</string>

    <string name="mine_chat_record_time_short">录音时间太短</string>

    <string name='listguide'>列表导览</string>
    <string name="delete_success">删除成功</string>
    <string name="inroduce">博物馆简介</string>
    <string name="ar">AR互动</string>
    <!--我的模块-->
    <string name="mine_title_mine">我的</string>
    <string name="mine_label_menu_footprint">我的足迹</string>
    <string name="mine_label_menu_partner">我的同伴</string>
    <string name="mine_label_menu_help">一键求助</string>
    <string name="mine_label_menu_message">消息</string>
    <string name="mine_label_menu_feedback">意见反馈</string>
    <string name="mine_label_menu_questionnaire">调查问卷</string>
    <string name="mine_label_menu_help_get_lost">迷路</string>
    <string name="mine_label_menu_help_injured">受伤</string>
    <string name="mine_label_menu_help_other">其他</string>
    <string name="mine_label_menu_partner_build_group">创建群组</string>
    <string name="mine_label_menu_partner_join_group">加入群组</string>
    <string name="mine_help_dialog_comfort">消息已发送,请耐心等待工作人员到达!</string>
    <string name="mine_partner_title_group">群组</string>
    <string name="mine_partner_hint_please_input_group_id">请输入群组编号…</string>
    <string name="mine_partner_join_group_waiting">正在等待群主审核…</string>
    <string name="mine_partner_cancel_application">取消申请</string>
    <string name="mine_partner_log_out_group">退出群组</string>
    <string name="mine_partner_press_to_record">按住说话</string>
    <string name="mine_chat_setting_label_group_name">群组名称:</string>
    <string name="mine_chat_setting_label_group_id">群组ID:</string>
    <string name="mine_chat_setting_label_my_nick_name">我的昵称:</string>
    <string name="mine_chat_setting_label_show_nick_name">显示昵称:</string>
    <string name="mine_chat_setting_label_group_introduction">群组简介:</string>
    <string name="mine_chat_setting_label_certification">加入群组认证:</string>
    <string name="mine_chat_label_group_num">群组号:</string>

    <string name="mine_chat_record_cancel">松手取消录音</string>
    <string name="mine_chat_label_user">用户:</string>
    <string name="mine_chat_label_want_to_join_group">申请加入群组</string>
    <string name="mine_chat_join_request_refuse">请求被拒绝</string>
    <string name="mine_chat_setting_dialog_hint_group_name">请输入群组名称</string>
    <string name="mine_chat_setting_dialog_hint_group_id">请输入群组ID</string>
    <string name="mine_chat_setting_dialog_hint_group_desc">请输入群组简介</string>
    <string name="mine_chat_setting_dialog_hint_my_nick_name">请输入新的昵称</string>
    <string name="mine_feedback_hint_please_input_your_contact">请输入您的联系方式</string>
    <string name="mine_feedback_hint_please_input_your_feedback">请输入您的留言</string>
    <string name="map_friend_location_no_my_location">无法获取当前位置</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullview">全景路线</string>
    <string name="hot_route">热门路线</string>
    <string name="precious_route">镇馆之宝路线</string>
    <string name="rate_route">快速路线</string>
    <string name="child_route">亲子路线</string>
    <string name="star_guide">开始导航</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="developing">开发中…</string>
    <string name="input_exhibit">输入展品名称</string>
    <string name="swich_tip_one">检查到当前您位于</string>
    <string name="switch_floor_two">层,是否切换到该地图</string>
    <string name="nanyue_meseum">西汉南越王博物馆</string>

    <!--通用-->
    <string name="common_agree">同意</string>
    <string name="common_dis_agree">拒绝</string>
    <string name="common_ok">确定</string>
    <string name="common_send">发送</string>
    <string name="common_please_wait">请稍后</string>

    <string name="bathroom">洗手间</string>
    <string name="elevator">电梯</string>
    <string name="escalator">扶梯</string>
    <string name="stairs">楼梯</string>
    <string name="shop">洗手间</string>
    <string name="add_connect_error">网络链接异常</string>


    <string name='switch_info'>收到其他楼层信息，是否切换楼层？</string>
    <string name="map_guide">地图导览</string>
    <string name="floor_one">主体楼一层</string>
    <string name="floor_two">主体楼二层</string>
    <string name="floor_three">墓原址展厅</string>
    <string name="floor_four">瓷枕展厅</string>
    <string name="enter_exhibition">进入展厅</string>
    <string name="going">加载中...</string>
    <string name="no_device">该楼层暂无此设施</string>
    <string-array name="settings">

        <item>自动讲解</item>
        <item>智慧服务</item>
        <item>节能模式</item>
        <item>公众关机</item>
        <item>自动模式</item>
        <item>感应模式</item>
        <item>报警模式</item>
        <item>网络设置</item>
        <item>服务器设置</item>
        <item>RSSI设置</item>
        <item>工程模式</item>
        <item>测试平台</item>
        <item>应用更新</item>
        <item>清除资源</item>
        <item>管理员密码</item>
        <item>设备编号</item>
        <item>版本信息</item>
        <item>数据库更新</item>
        <item>资源更新</item>
    </string-array>

</resources>
