<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="264dp"
    android:background="@drawable/bg_mine_common_rounded_rectangle_dialog"
    android:orientation="vertical"
    android:paddingBottom="24dp">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:padding="12dp"
        android:src="@drawable/ic_mine_common_dialog_close" />

    <EditText
        android:id="@+id/edt_group_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_mine_common_rounded_rectangle_content"
        android:hint="@string/mine_partner_hint_please_input_group_id"
        android:lines="1"
        android:paddingBottom="12dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:textColor="@color/colorBrouse"
        android:textColorHint="@color/colorBrouse"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tv_label_waiting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:lines="1"
        android:paddingBottom="12dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:text="@string/mine_partner_join_group_waiting"
        android:textColor="@color/colorBrouse"
        android:textSize="22sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="148dp"
        android:layout_height="48dp"

        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_mine_common_rounded_rectangle_btn"
        android:text="@string/common_ok"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>