<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_common"
    tools:context="com.hengda.smart.xhnyw.d.ui.MapActivity">

    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_back_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:paddingLeft="30dp"
            android:src="@drawable/select_back" />

        <TextView
            android:id="@+id/et_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_toRightOf="@id/img_back_map"
            android:background="@mipmap/bg_edit_search"
            android:drawableLeft="@mipmap/img_search_edit"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/input_exhibit"
            android:textColor="@color/colorBrouse"
            android:textSize="18sp" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/container_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_search" />

    <RadioGroup
        android:id="@+id/rp_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn_one_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:background="@drawable/select_btn_map"
            android:button="@null"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/floor_one"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btn_two_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/select_btn_map"
            android:button="@null"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/floor_two"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btn_three_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/select_btn_map"
            android:button="@null"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/floor_three"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btn_four_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:background="@drawable/select_btn_map"
            android:button="@null"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/floor_four"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="130dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/select_route" />

        <ImageView
            android:id="@+id/img_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/select_device" />
    </LinearLayout>
</RelativeLayout>
